# acevo-shared-memory

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
examples/: dashboard.rs  monitor.rs
src/: lib.rs  mapper.rs
src/bindings/source/: wrapper.hpp
src/views/: graphics_view.rs  mod.rs  physics_view.rs  static_view.rs  storage.rs  utils.rs  view.rs
src/wrappers/: car_location.rs  engine_type.rs  flag_type.rs  mod.rs  session_type.rs  starting_grip.rs  status.rs
