[package]
name = "acevo-shared-memory"
version = "0.1.0"
edition = "2024"
authors = ["Domenico Mancini"]
repository = "https://github.com/dSyncro/acevo-shared-memory"
license = "MIT"
keywords = ["windows", "memory", "shared", "ipc", "acevo"]
categories = ["os::windows-apis", "api-bindings"]
description = "A library to easily access Assetto Corsa Evo shared memory."
readme = "README.md"
rust-version = "1.85"
exclude = ["AGENTS.md", ".vscode/"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_arrays = { version = "0.2", optional = true }
strum = { version = "0.28", features = ["derive"] }
win-shared-memory = "0.1"

[dev-dependencies]
ratatui = "0.30"

[build-dependencies]
bindgen = "0.72"

[features]
default = []
serde = ["dep:serde", "dep:serde_arrays"]
